--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+:root {
+    --primary-color: #333333;
+    --primary-light: #fff4e6;
+    --muted-grey: #7D6F6F;
+    --accent-yellow: #FD8B44;
+    --heading-font: "Playfair Display", serif;
+    --body-font: "Roboto", sans-serif;
+    --link-fonts: "Quicksand", sans-serif;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
     font-family: Arial, sans-serif;
     max-width: 30vw;
@@ -12,12 +29,17 @@ body {
     margin-bottom: 1.5rem;
 }
 
-.profile-img {
-    width: 150px;
-    height: 150px;
-    border-radius: 8px;
-    object-fit: cover;
+.image {
+    width: 50%;
+    height: auto;
+
 }
+
+.image img {
+    width: 50%;
+    height: auto;
+}
+
 
 .header-content {
     flex: 1;
