--- a/css/style.css
+++ b/css/style.css
@@ -113,12 +113,10 @@ h3 {
 footer {
     text-align: center;
     color: #666;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    margin: 3rem 0;
-}
+    margin-top: 3rem;
+    padding: 1rem 0;
+    background-color: #f2f2f2;
+  }
 
 .social-media-list, .contact-links-list {
     list-style: none;
